--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -5,7 +5,7 @@ import re
 
 
 # Upload config.
-configfile: "data/config.yaml"
+configfile: "config/config.yaml"
 
 
 # Path to snakemake wrappers repository.
@@ -14,7 +14,7 @@ WRAPPER_PREFIX = "https://raw.githubusercontent.com/avilab/virome-wrappers"
 # Path to indexed host genome. Set HOST_GENOME environment variable or use path directly.
 HOST_GENOME = os.environ["HOST_GENOME"]
 
-# Text file with full paths to raw reads, one per line. Specify path in data/config.yaml.
+# Text file with full paths to raw reads, one per line. Specify path in config/config.yaml.
 with open(config["batches"], "r") as h:
     batches = h.read().splitlines()
 
@@ -35,18 +35,18 @@ def get_reads(wildcards):
 # Workflow target.
 rule all:
     input:
-        "output/upload.done",
+        "results/upload.done",
 
 
 # Generate study and sample metadata excel spreadsheet.
 rule form:
     input:
-        samples="data/sample_metadata.csv",
-        batches="data/batches.txt",
-        config="data/config.yaml",
+        samples="config/sample_metadata.csv",
+        batches="config/batches.txt",
+        config="config/config.yaml",
     output:
-        xlsx="output/ena_submission.xlsx",
-        data="output/data.txt",
+        xlsx="results/ena_submission.xlsx",
+        data="results/data.txt",
     log:
         "logs/form.log",
     shell:
@@ -60,17 +60,17 @@ rule parse_form:
     input:
         rules.form.output.xlsx,
     output:
-        study="output/studies.tsv",
-        sample="output/samples.tsv",
-        experiment="output/experiments.tsv",
-        run="output/runs.tsv",
+        study="results/studies.tsv",
+        sample="results/samples.tsv",
+        experiment="results/experiments.tsv",
+        run="results/runs.tsv",
     log:
         "logs/parse_form.log",
     params:
         extra="--action add --vir",
     shell:
         """
-        (python scripts/process_xlsx.py --form {input[0]} --out_dir output {params.extra}) 2> {log}
+        (python scripts/process_xlsx.py --form {input[0]} --out_dir results {params.extra}) 2> {log}
         """
 
 
@@ -79,8 +79,8 @@ rule trim:
     input:
         unpack(get_reads),
     output:
-        out1=temp("output/data/{run}_R1_trimmed.fastq.gz"),
-        out2=temp("output/data/{run}_R2_trimmed.fastq.gz"),
+        out1=temp("results/data/{run}_R1_trimmed.fastq.gz"),
+        out2=temp("results/data/{run}_R2_trimmed.fastq.gz"),
     log:
         "logs/{run}_trim.log",
     params:
@@ -101,8 +101,8 @@ rule maphost:
         in2=rules.trim.output.out2,
         ref=HOST_GENOME,
     output:
-        outu=temp("output/data/{run}_interleaved_clean.fastq.gz"),
-        statsfile="output/data/{run}_maphost.txt",
+        outu=temp("results/data/{run}_interleaved_clean.fastq.gz"),
+        statsfile="results/data/{run}_maphost.txt",
     log:
         "logs/{run}_maphost.log",
     params:
@@ -120,8 +120,8 @@ rule reformat:
     input:
         rules.maphost.output.outu,
     output:
-        out="output/data/{run}_R1_clean.fastq.gz",
-        out2="output/data/{run}_R2_clean.fastq.gz",
+        out="results/data/{run}_R1_clean.fastq.gz",
+        out2="results/data/{run}_R2_clean.fastq.gz",
     log:
         "logs/{run}_reformat.log",
     params:
@@ -136,19 +136,19 @@ rule reformat:
 # Upload new study or samples to ENA. When adding new samples to study, omit study table.
 rule upload:
     input:
-        expand("output/data/{run}_R{pair}_clean.fastq.gz", run=RUNS, pair=[1, 2]),
+        expand("results/data/{run}_R{pair}_clean.fastq.gz", run=RUNS, pair=[1, 2]),
         study=rules.parse_form.output.study,
         sample=rules.parse_form.output.sample,
         experiment=rules.parse_form.output.experiment,
         run=rules.parse_form.output.run,
         data=rules.form.output.data,
     output:
-        "output/upload.done",
+        "results/upload.done",
     log:
         "logs/upload.log",
     params:
         action="add",
-        data="/Users/taavi/Projects/sarscov2-upload/.tests/reads/projects/covid/*/*fastq.gz",
+        data="results/data/*clean.fastq.gz",
         center=config["center"],
         secret=".secret.yml",
         extra="--dev --vir",
@@ -157,7 +157,7 @@ rule upload:
         mem_mb=4000,
     shell:
         """
-        (/Users/taavi/miniconda3/envs/ena_upload/bin/ena-upload-cli --action {params.action} \
+        ($CONDA_PREFIX/bin/ena-upload-cli --action {params.action} \
         --sample {input.sample} \
         --experiment {input.experiment} \
         --run {input.run} \
