updated config scripts

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,4 @@
-batches: "config/batches.txt"
+runs: "config/runs.csv"
 center: "Institute of Biomedicine and Translational Medicine, University of Tartu"
 
 ena_study:
