--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -48,9 +48,12 @@ rule form:
         xlsx="results/ena_submission.xlsx",
     log:
         "logs/form.log",
+    resources:
+        runtime=120,
+        mem_mb=4000,
     shell:
         """
-        (Rscript scripts/submission-metadata-excel.R -p {input.pep} -c {input.config} -t {FILE_NAME_TEMPLATE} -x {output.xlsx}) 2> {log}
+        (Rscript workflow/scripts/submission-metadata-excel.R -p {input.pep} -c {input.config} -t {FILE_NAME_TEMPLATE} -x {output.xlsx}) 2> {log}
         """
 
 
@@ -67,9 +70,12 @@ rule parse_form:
         "logs/parse_form.log",
     params:
         extra="--action add --vir",
+    resources:
+        runtime=120,
+        mem_mb=4000,
     shell:
         """
-        (python scripts/process_xlsx.py --form {input[0]} --out_dir results {params.extra}) 2> {log}
+        (python workflow/scripts/process_xlsx.py --form {input[0]} --out_dir results {params.extra}) 2> {log}
         """
 
 
@@ -105,11 +111,11 @@ rule maphost:
     log:
         "logs/{run}_maphost.log",
     params:
-        extra="minid=0.95 maxindel=3 bwr=0.16 bw=12 quickmatch fast minhits=2 qtrim=rl trimq=10 untrim usemodulo",
+        extra="minid=0.95 maxindel=3 bwr=0.16 bw=12 quickmatch fast minhits=2 qtrim=rl trimq=10 untrim",
     resources:
         runtime=lambda wildcards, attempt: attempt * 360,
-        mem_mb=16000,
-    threads: 8
+        mem_mb=40000,
+    threads: 4
     wrapper:
         f"{WRAPPER_PREFIX}/v0.6/bbtools/bbwrap"
 
@@ -145,13 +151,13 @@ rule upload:
         "logs/upload.log",
     params:
         action="add",
-        data="results/data/*clean.fastq.gz",
+        data="results/data/*_R*_clean.fastq.gz",
         center=config["center"],
         secret=".secret.yml",
-        extra="--dev --vir",
+        extra="--vir",
     resources:
-        runtime=360,
-        mem_mb=4000,
+        runtime=1440,
+        mem_mb=8000,
     shell:
         """
         ($CONDA_PREFIX/bin/ena-upload-cli --action {params.action} \
